# Simple_Search_Engine

./: CMakeLists.txt  LICENSE.txt  README.md
lib/: CMakeLists.txt  ConsolePrinter.hpp  Indexer.hpp  QueryParser.hpp  SearchEngine.hpp  Searcher.hpp  Trie.hpp
tests/: CMakeLists.txt  SearchEngineTests.cpp
tests/testing_folder/: Another C++ File.cpp  C++ File.cpp  Microsoft Word.docx  TXT.txt  Video.mov
tests/testing_folder/subfolder/: Commented C++ File.cpp
tests/testing_folder/subfolder/sub-subfolder/: Another TXT.txt  TXT.txt
